syntax = "proto3";

package rivet.backend.pkg.nomad.msg.monitor_node_deregistered;

import "proto/common.proto";

/// name = "msg-nomad-monitor-node-deregistered"
/// parameters = [
/// 	{ name = "nomad_node_id" },
/// ]
message Message {
	rivet.common.Uuid cluster_id = 1;
	rivet.common.Uuid region_id = 2;
	string node_id = 3;
}
